<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wind">Wind</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">humidity</string>
    <string name="pressure">Pressure</string>
    <string name="today">Today</string>
    <string name="next_5_days">Next 5 Days</string>
</resources>