<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainScreen"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txtCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Egypt," />

            <TextView
                android:id="@+id/txtState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtCountry"
                app:layout_constraintStart_toEndOf="@+id/txtCountry"
                app:layout_constraintTop_toTopOf="@+id/txtCountry"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Cairo" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/myBlue"
                app:cardCornerRadius="9dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCountry">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgMain"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/rain" />

                    <TextView
                        android:id="@+id/txtWeatherState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="@+id/imgMain"
                        app:layout_constraintStart_toStartOf="@+id/imgMain"
                        app:layout_constraintTop_toBottomOf="@+id/imgMain"
                        tools:text="Heavy Rain" />

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/txtWeatherState"
                        app:layout_constraintStart_toStartOf="@+id/txtWeatherState"
                        app:layout_constraintTop_toBottomOf="@+id/txtWeatherState"
                        tools:text="Sunday, 02 Oct" />

                    <TextView
                        android:id="@+id/txtTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textColor="@android:color/white"
                        android:textSize="60sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/imageView5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtDate"
                        tools:text="24°" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="70dp"
                        android:background="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="140dp"
                        android:background="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:background="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/air"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView6"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/wind"
                        android:textAllCaps="true"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView6" />

                    <TextView
                        android:id="@+id/txtWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/imageView6"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:text="12.2 km/j" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="@+id/imageView6"
                        app:srcCompat="@drawable/temp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/feels_like"
                        android:textAllCaps="true"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView8"
                        app:layout_constraintTop_toTopOf="@+id/imageView6" />

                    <TextView
                        android:id="@+id/txtFeelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView8"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        tools:text="25°" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3"
                        app:srcCompat="@drawable/pressure"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/pressure"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView9"
                        app:layout_constraintTop_toTopOf="@+id/imageView3" />

                    <TextView
                        android:id="@+id/txtPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView9"
                        app:layout_constraintTop_toBottomOf="@+id/textView8"
                        tools:text="1014 mbar" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:srcCompat="@drawable/humidity"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/humidity"
                        android:textAllCaps="true"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/imageView6"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView10"
                        app:layout_constraintTop_toTopOf="@+id/imageView3" />

                    <TextView
                        android:id="@+id/txtHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/imageView6"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView10"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"
                        tools:text="22%" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/current_day_layout" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/today"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/next_5_days"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                app:layout_constraintEnd_toStartOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/txtNext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtNext"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>